[gd_scene load_steps=4 format=2]

[ext_resource path="res://Components/AI/RangedEnemyAI.gd" type="Script" id=1]
[ext_resource path="res://Components/Enemies/PlayerDetectionZone/PlayerDetectionZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://Components/Enemies/WanderController/WanderController.tscn" type="PackedScene" id=3]

[node name="RangedEnemyAI" type="Node2D"]
position = Vector2( 0, -1 )
script = ExtResource( 1 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 2 )]

[node name="WanderController" parent="." instance=ExtResource( 3 )]

[node name="FleeTimer" type="Timer" parent="."]
one_shot = true

[node name="DebugTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="DebugTimer" to="." method="_on_DebugTimer_timeout"]
